# nier-automata

./: CMakeLists.txt  README.md
MealyToMooreAndMooreToMealy/: CMakeLists.txt  MealyToMoore.dot  MooreToMealy.dot  input.dot  main.cpp
MealyToMooreAndMooreToMealy/Converter/: Converter.cpp  Converter.h
MealyToMooreAndMooreToMealy/IMachine/: IMachine.h
MealyToMooreAndMooreToMealy/Mealy/: CMealy.cpp  CMealy.h
MealyToMooreAndMooreToMealy/Moore/: CMoore.cpp  CMoore.h
Minimization/: CMakeLists.txt  Minimizer.cpp  Minimizer.h  README.md  main.cpp  tes_minimization_in_one.dot  test_handing.dot  test_minimization.dot
NKAtoDKA/: CMakeLists.txt  README.md  main.cpp
NKAtoDKA/CDKA/: CDKA.cpp  CDKA.h
NKAtoDKA/CNKA/: CNKA.cpp  CNKA.h
NKAtoDKA/NKAtoDKAConverter/: NKAtoDKAConverter.cpp  NKAtoDKAConverter.h
NKAtoDKA/test/: simple_test.dot  test_with_e.dot
